--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql": "^16.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-minimal-pie-chart": "^8.3.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -32,9 +33,11 @@
     "esbuild-runner": "^2.2.1",
     "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "nodemon": "^2.0.15",
