--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql": "^16.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.33.1",
     "react-minimal-pie-chart": "^8.3.0",
     "styled-components": "^5.3.3"
   },
